5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2446.log
== TEST (2019-04-15 18:53:09) 
-- CODE:
senha=float(input("digite a senha:"))
cm= senha//100000
resto_cm=senha % 100000
dm=resto_cm//10000
resto_dm=resto_cm%10000
um=resto_dm//1000
resto_um=resto_dm%1000
cent=resto_um//100
resto_c=resto_um%100
dez=resto_c//10
resto_dez=resto_c%10
result_1=dm+cent+resto_dez
resul_2=cm+um+dez
if(result_1%result_2)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if(result_1%result_2)==0:
NameError: name 'result_2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:41) 
-- CODE:
senha=float(input("digite a senha:"))
cm= senha//100000
resto_cm=senha % 100000
dm=resto_cm//10000
resto_dm=resto_cm%10000
um=resto_dm//1000
resto_um=resto_dm%1000
cent=resto_um//100
resto_c=resto_um%100
dez=resto_c//10
resto_dez=resto_c%10
resul_1=dm+cent+resto_dez
resul_2=cm+um+dez
if(resul_1%resul_2)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:53:50) 
-- CODE:
senha=float(input("digite a senha:"))
cm= senha//100000
resto_cm=senha % 100000
dm=resto_cm//10000
resto_dm=resto_cm%10000
um=resto_dm//1000
resto_um=resto_dm%1000
cent=resto_um//100
resto_c=resto_um%100
dez=resto_c//10
resto_dez=resto_c%10
resul_1=dm+cent+resto_dez
resul_2=cm+um+dez
if(resul_1%resul_2)==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.15316
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
